--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
           felt slightly bare and uninviting. I’ve got some simple tips to help
           you make any room feel complete.
         </p>
-        <div class="author">
-          <div class="info">
-            <img src="./images/avatar-michelle.jpg" alt="Michelle" />
-            <div>
-              <span class="name">Michelle Appleton</span>
-              <span class="date">28 Jun 2020</span>
-            </div>
+      </div>
+      <div class="author" id="author">
+        <div class="info" id="info">
+          <img src="./images/avatar-michelle.jpg" alt="Michelle" />
+          <div>
+            <span class="name">Michelle Appleton</span>
+            <span class="date">28 Jun 2020</span>
           </div>
-          <div class="share-options">
-            <span>Share</span>
-            <img src="./images/icon-facebook.svg" alt="facebook" />
-            <img src="./images/icon-twitter.svg" alt="twitter" />
-            <img src="./images/icon-pinterest.svg" alt="pinterest" />
-          </div>
-          <div class="share-btn">
-            <img src="./images/icon-share.svg" alt="share" />
-          </div>
+        </div>
+        <div class="share-options hidden" id="share-options">
+          <span>Share</span>
+          <img src="./images/icon-facebook.svg" alt="facebook" />
+          <img src="./images/icon-twitter.svg" alt="twitter" />
+          <img src="./images/icon-pinterest.svg" alt="pinterest" />
+        </div>
+        <div id="share-btn" class="share-btn">
+          <img src="./images/icon-share.svg" alt="share" />
         </div>
       </div>
     </article>
